--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -465,7 +465,6 @@ Made by MrsBlobby |
 // === Category + Subcategory icons ===
 const CategoryIcons = {
   'C.A.M.P. Pieces': '/assets/MainCategory-CAMPPiecesIcon.png',
-  '
   'Foundations': '/assets/FoundationsIcon.png',
   'Decorations': '/assets/MainCategory-DecorationsIcon.png',
   'Defenses': '/assets/MainCategory-DefensesIcon.png',
@@ -478,7 +477,6 @@ const CategoryIcons = {
   'Utility': '/assets/MainCategory-UtilityIcon.png',
   'Wall Decor': '/assets/MainCategory-WallDecorIcon.png',
   'Structure': '/assets/MainCategory-StructureIcon.png',
-  'Foundations': '/assets/SubCategory-FoundationsIcon.png',
   'Porches': '/assets/SubCategory-PorchesIcon.png',
   'Floors':'/assets/SubCategory-FloorsIcon.png',
   'Walls': '/assets/SubCategory-WallsIcon.png',
@@ -487,7 +485,7 @@ const CategoryIcons = {
   'Doors': '/assets/SubCategory-DoorsIcon.png',
   'Columns': '/assets/SubCategory-ColumnsIcon.png',
   'Fences': '/assets/SubCategory-FencesIcon.png',
-  'Barricades': '/assets/SubCategory-BarricadeIcon.png'
+  'Barricades': '/assets/SubCategory-BarricadeIcon.png',
   'Traps': '/assets/SubCategory-TrapsIcon.png',
   'Turrets': '/assets/SubCategory-TurretsIcon.png',
   'Generators': '/assets/SubCategory-GeneratorsIcon.png',
@@ -496,7 +494,6 @@ const CategoryIcons = {
   'Ceiling Lights': '/assets/SubCategory-CeilingLightsIcon.png',
   'Fire': '/assets/SubCategory-FireIcon.png',
   'Lamps': '/assets/SubCategory-LampsIcon.png',
-  'Signs': '/assets/SubCategory-SignsIcon.png',
   'Wall Lights': '/assets/SubCategory-WallLightsIcon.png',
   'Crafting': '/assets/SubCategory-CraftingIcon.png',
   'Collectors': '/assets/SubCategory-CollectorsIcon.png',
@@ -518,7 +515,6 @@ const CategoryIcons = {
   'Crockery': '/assets/SubCategory-CrockeryIcon.png',
   'Entertainment': '/assets/SubCategory-EntertainmentIcon.png',
   'Fauna': '/assets/SubCategory-FaunaIcon.png',
-  'Holiday': '/assets/SubCategory-HolidayIcon.png',
   'Lawn & Garden': '/assets/SubCategory-Lawn&GardenIcon.png',
   'Novelties': '/assets/SubCategory-NoveltiesIcon.png',
   'Outdoor': '/assets/SubCategory-OutdoorIcon.png',
@@ -538,7 +534,7 @@ const CategoryIcons = {
   'Window': '/assets/SubCategory-WindowIcon.png',
   'Additional Storage': '/assets/SubCategory-AdditionalStorageIcon.png',
   'Displays': '/assets/SubCategory-DisplaysIcon.png',
-  'Stash Boxes': '/assets/SubCategory-StashBoxesIcon.png,
+  'Stash Boxes': '/assets/SubCategory-StashBoxesIcon.png',
   'Farm': '/assets/SubCategory-FarmIcon.png',
   'Frontier': '/assets/SubCategory-FrontierIcon.png',
   'Industrial': '/assets/SubCategory-IndustrialIcon.png',
@@ -549,7 +545,7 @@ const CategoryIcons = {
   'Scavenger': '/assets/SubCategory-ScavengerIcon.png',
   'Allies': '/assets/SubCategory-AlliesIcon.png',
   'Pets': '/assets/SubCategory-PetsIcon.png',
-  'Pet Furniture': '/assets/SubCategory-PetFurnitureIcon.png
+  'Pet Furniture': '/assets/SubCategory-PetFurnitureIcon.png'
 };
 
 
@@ -636,13 +632,6 @@ const CategoryIcons = {
   }
 });
 
-      
-        if (i < categories.length - 1) {
-          const arrow = document.createElement('span');
-          arrow.className = 'arrow';
-          catWrap.appendChild(arrow);
-        }
-      });
     
       right.appendChild(catWrap);
     }
