--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -465,7 +465,7 @@ Made by MrsBlobby |
 // === Category + Subcategory icons ===
 const CategoryIcons = {
   'C.A.M.P. Pieces': '/assets/MainCategory-CAMPPiecesIcon.png',
-  'Foundations': '/assets/FoundationsIcon.png',
+  'Foundations': '/assets/SubCategory-FoundationsIcon.png',
   'Decorations': '/assets/MainCategory-DecorationsIcon.png',
   'Defenses': '/assets/MainCategory-DefensesIcon.png',
   'Dwellers': '/assets/MainCategory-DwellersIcon.png',
