--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -615,7 +615,7 @@ const CategoryIcons = {
   if (iconPath) {
     const icon = document.createElement('img');
     icon.src = iconPath;
-    icon.style.width = 'auto';
+    icon.style.width = '30px';
     icon.style.height = '30px';
     icon.style.verticalAlign = 'middle';
     icon.style.marginRight = '6px';
