--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -382,10 +382,10 @@ Made by MrsBlobby |
       <select id="sortMode">
         <option value="camp-top" selected>Workshop Menu ▼</option>
         <option value="camp-bottom">Workshop Menu ▲</option>
-        <option value="old-new">New ▼</option>
-        <option value="new-old">New ▲</option>
         <option value="az">Alphabetical ▼</option>
         <option value="za">Alphabetical ▲</option>
+        <option value="old-new">Oldest</option>
+        <option value="new-old">Newest</option>
       </select>
     </div>
   </div>
