--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -464,7 +464,7 @@ Made by MrsBlobby |
       }
 // === Category + Subcategory icons ===
 const CategoryIcons = {
-  'Quests': '/assets/MainCategory-QuestsIcon.svg',
+  'Quest': '/assets/MainCategory-QuestsIcon.svg',
   'Wallpapers': '/assets/MainCategory-WallpapersIcon.svg',
   'C.A.M.P. Pieces': '/assets/MainCategory-CAMPPiecesIcon.svg',
   'Foundations': '/assets/SubCategory-FoundationsIcon.png',
