--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -469,7 +469,7 @@ const CategoryIcons = {
   'C.A.M.P. Pieces': '/assets/MainCategory-CAMPPiecesIcon.svg',
   'Foundations': '/assets/SubCategory-FoundationsIcon.png',
   'Decorations': '/assets/MainCategory-DecorationsIcon.svg',
-  'Defenses': '/assets/MainCategory-DefensesIcon.svg',
+  'Defense': '/assets/MainCategory-DefensesIcon.svg',
   'Dwellers': '/assets/MainCategory-DwellersIcon.svg',
   'Furniture': '/assets/MainCategory-FurnitureIcon.svg',
   'Lights': '/assets/MainCategory-LightsIcon.svg',
