--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -465,6 +465,7 @@ Made by MrsBlobby |
 // === Category + Subcategory icons ===
 const CategoryIcons = {
   'Quest': '/assets/MainCategory-QuestsIcon.svg',
+  'Objectives': '/assets/MainCategory-QuestsIcon.svg',
   'Wallpapers': '/assets/MainCategory-WallpapersIcon.svg',
   'C.A.M.P. Pieces': '/assets/MainCategory-CAMPPiecesIcon.svg',
   'Foundations': '/assets/SubCategory-FoundationsIcon.png',
