--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -94,7 +94,7 @@
     padding: 10px;
     font-size: 16px;
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
     border: 2px solid var(--accent);
     border-radius: 6px;
     background-color: var(--card-bg);
@@ -372,6 +372,9 @@ Made by MrsBlobby |
   <div class="controls">
     <div class="search-line">
       <input type="text" id="searchBox" placeholder="Enter item name..." autofocus>
+      <label for="searchBy" style="color: var(--text-muted); font-size: 14px; margin-left: 8px; margin-right: 4px;">
+       Search by:
+      </label>
       <select id="searchBy" style="margin-left: 8px; padding: 8px; border-radius: 6px; border: 2px solid var(--accent); background-color: var(--card-bg); color: var(--text);">
         <option value="name" selected>Item Name</option>
         <option value="book">Plan Name</option>
