--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -369,16 +369,20 @@ Made by MrsBlobby |
     </details>
   </div>
 
-<div class="custom-dropdown" style="position: relative; display: inline-block;">
-  <div id="dropdownSelected" style="padding: 8px 12px; border-radius: 6px; border: 2px solid var(--accent); background-color: var(--card-bg); color: var(--text); cursor: pointer;">
-    Item Name
+<div class="controls">
+  <div class="search-line">
+    <input type="text" id="searchBox" placeholder="Search..." />
+    <div class="custom-dropdown" style="position: relative; display: inline-block; margin-left: 8px;">
+      <div id="dropdownSelected" style="padding: 8px 12px; border-radius: 6px; border: 2px solid var(--accent); background-color: var(--card-bg); color: var(--text); cursor: pointer;">
+        Item Name
+      </div>
+      <div id="dropdownOptions" style="display: none; position: absolute; top: 100%; left: 0; z-index: 100; background-color: var(--card-bg); border: 2px solid var(--accent); border-radius: 6px; overflow: hidden;">
+        <div class="option" data-value="name" style="padding: 8px 12px; cursor: pointer;">Item Name</div>
+        <div class="option" data-value="book" style="padding: 8px 12px; cursor: pointer;">Plan Name</div>
+        <div class="option" data-value="entm" style="padding: 8px 12px; cursor: pointer;">Entitlement Name</div>
+      </div>
+    </div>
   </div>
-  <div id="dropdownOptions" style="display: none; position: absolute; top: 100%; left: 0; z-index: 100; background-color: var(--card-bg); border: 2px solid var(--accent); border-radius: 6px; overflow: hidden;">
-    <div class="option" data-value="name" style="padding: 8px 12px; cursor: pointer;">Item Name</div>
-    <div class="option" data-value="book" style="padding: 8px 12px; cursor: pointer;">Plan Name</div>
-    <div class="option" data-value="entm" style="padding: 8px 12px; cursor: pointer;">Entitlement Name</div>
-  </div>
-</div>
 
 
     <div class="inline-group">
