--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -94,7 +94,7 @@
     padding: 10px;
     font-size: 16px;
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
     border: 2px solid var(--accent);
     border-radius: 6px;
     background-color: var(--card-bg);
@@ -273,6 +273,23 @@
     text-align: left;
   }
 
+      .controls.search-line {
+       display: flex;
+       gap: 8px;
+      } 
+
+      #searchBox, #dropdownSelected {
+       height: 40px; /* adjust to match your design */
+       box-sizing: border-box;
+      }
+
+      #dropdownSelected {
+       display: flex;
+       align-items: center;
+       padding: 0 12px;
+    }
+
+
   @media (max-width: 600px) {
     li {
       flex-direction: column;
@@ -374,7 +391,7 @@ Made by MrsBlobby |
     <input type="text" id="searchBox" placeholder="Search..." />
     <div class="custom-dropdown" style="position: relative; display: inline-block; margin-left: 8px;">
       <div id="dropdownSelected" style="padding: 8px 12px; border-radius: 6px; border: 2px solid var(--accent); background-color: var(--card-bg); color: var(--text); cursor: pointer;">
-        Item Name
+        Search By:
       </div>
       <div id="dropdownOptions" style="display: none; position: absolute; top: 100%; left: 0; z-index: 100; background-color: var(--card-bg); border: 2px solid var(--accent); border-radius: 6px; overflow: hidden;">
         <div class="option" data-value="name" style="padding: 8px 12px; cursor: pointer;">Item Name</div>
@@ -631,6 +648,14 @@ const filtered = db.filter(item => {
           name.className = 'result-name';
           name.textContent = r.Name;
           left.appendChild(name);
+
+          if (r.CNAM_FormID) {
+            const img = document.createElement('img');
+            img.src = `Images/${r.CNAM_FormID.toLowerCase()}.png`;
+            img.alt = r.Name;
+            img.loading = "lazy";
+            left.appendChild(img);
+          }
 
     const right = document.createElement('div');
     right.className = 'result-right';
