--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -273,47 +273,98 @@
     text-align: left;
   }
 
-.controls.search-line {
+.controls {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background: var(--bg);
+  padding: 12px 16px;
+  border-bottom: 1px solid var(--card-bg);
   display: flex;
-  align-items: stretch;  /* children fill height */
-  gap: 0;                /* remove extra horizontal space */
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+
+.controls .search-line {
+  display: flex;
+  align-items: stretch; /* ensures children same height */
+  gap: 0; /* no gap between input and dropdown */
+  width: 100%;
+  max-width: 450px; /* optional */
 }
 
 #searchBox {
-  height: 40px;
+  flex: 1;
+  padding: 10px 12px;
   font-size: 16px;
-  padding: 0 12px;
-  box-sizing: border-box;
-  border-radius: 6px 0 0 6px; /* left-rounded corners */
   border: 2px solid var(--accent);
+  border-right: none; /* remove double border with dropdown */
+  border-radius: 6px 0 0 6px;
   background-color: var(--card-bg);
   color: var(--text);
-}
-
-#dropdownSelected {
-  height: 40px;
-  font-size: 16px;        
-  padding: 0 12px;
   box-sizing: border-box;
-  border-radius: 0 6px 6px 0; /* right-rounded corners */
-  border: 2px solid var(--accent);
-  border-left: none;      /* merge with search box border */
-  background-color: var(--card-bg);
-  color: var(--text);
-  display: flex;
-  align-items: center;    
-  cursor: pointer;
 }
 
 .custom-dropdown {
-  display: inline-flex;  /* keep dropdown inline with search */
-  vertical-align: middle;
   position: relative;
+  display: inline-flex;
+  align-items: stretch;
+}
+
+#dropdownSelected {
+  padding: 0 12px;
+  font-size: 16px;
+  border: 2px solid var(--accent);
+  border-left: none; /* remove double border with input */
+  border-radius: 0 6px 6px 0;
+  background-color: var(--card-bg);
+  color: var(--text);
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+#dropdownOptions {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 100;
+  background-color: var(--card-bg);
+  border: 2px solid var(--accent);
+  border-radius: 6px;
+  overflow: hidden;
+  width: max-content; /* match dropdown content width */
+  min-width: 100%; /* at least as wide as selected */
 }
 
 
 #dropdownOptions {
-  top: 100%; 
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 100;
+  background-color: var(--card-bg);
+  border: 2px solid var(--accent);
+  border-radius: 6px;
+  overflow: hidden;
+  width: max-content; /* match dropdown content width */
+  min-width: 100%; /* at least as wide as selected */
+}
+
+#dropdownOptions .option {
+  padding: 8px 12px;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+#dropdownOptions .option:hover {
+  background-color: var(--accent-dim);
+  color: black;
 }
 
   @media (max-width: 600px) {
@@ -341,7 +392,18 @@
     }
     .controls {
       flex-direction: column;
-    }
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background: var(--bg);
+  padding: 12px 16px;
+  border-bottom: 1px solid var(--card-bg);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
   }
 </style>
 </head>
@@ -415,7 +477,7 @@ Made by MrsBlobby |
 <div class="controls">
   <div class="search-line">
     <input type="text" id="searchBox" placeholder="Search..." />
-    <div class="custom-dropdown" style="position: relative; display: inline-block; margin-left: 8px;">
+    <div class="custom-dropdown" style="position: relative; display: inline-block; margin-left: 0px;">
       <div id="dropdownSelected" style="padding: 8px 12px; border-radius: 6px; border: 2px solid var(--accent); background-color: var(--card-bg); color: var(--text); cursor: pointer;">
         Search By:
       </div>
